--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-geocoding": "^0.3.0",
     "react-native-maps": "^0.22.0",
     "react-native-maps-directions": "^1.6.0",
+    "react-native-splash-screen": "^3.1.1",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
     "react-redux": "^5.1.1",
