drawing finished polyline

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,10 @@ target 'test1' do
   pod 'Google-Maps-iOS-Utils' # Uncomment this line if you want to support GoogleMaps on iOS
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'react-native-geocoder', :path => '../node_modules/react-native-geocoder'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
 
 post_install do |installer|
