--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.0.0",
     "axios": "^0.18.0",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "^0.57.4",
+    "react-native-geocoder": "^0.5.0",
     "react-native-geocoding": "^0.3.0",
     "react-native-maps": "^0.22.0",
     "react-native-maps-directions": "^1.6.0",
