--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.0.0",
     "axios": "^0.18.0",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "^0.57.4",
+    "react-native-geocoder": "^0.5.0",
     "react-native-geocoding": "^0.3.0",
     "react-native-maps": "^0.22.0",
     "react-native-maps-directions": "^1.6.0",
-    "react-native-splash-screen": "^3.1.1",
+    "react-native-splash-screen": "^3.0.6",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.0",
     "react-redux": "^5.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
